--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "794285fa-2f9a-4e51-af37-70eea0149b16"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
